--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header class="hero text-white text-center p-5">
   <img src="me.jpg" class="rounded-circle mb-3" alt="Profile photo" width="150" height="150">
   <h1 class="mb-3">Mohamed Abdullah</h1>
-  <h3 class="mb-4">Web Developer | Backend Developer</h3>
+  <h3 class="mb-4">Web Developer | Full-Stack Developer</h3>
   <div class="d-flex justify-content-center gap-3 flex-wrap">
     <a href="https://github.com/yourusername" target="_blank" class="btn btn-light">GitHub</a>
     <a href="https://linkedin.com/in/yourusername" target="_blank" class="btn btn-light">LinkedIn</a>
